# api-gym

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
app/: __init__.py  main.py
app/api/v1/: deps.py  router.py
app/api/v1/endpoints/: admin_import.py  auth.py  billing.py  demo.py  jobs.py  memberships.py  nutrition.py  progress.py  routines.py  usage.py  users.py
app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  enums.py  membership.py  nutrition.py  progress.py  training.py  usage.py  user.py
app/integrations/email/: sender_stub.py
app/integrations/payments/: provider_stub.py
app/schemas/: admin_import.py  auth.py  billing.py  common.py  membership.py  nutrition.py  progress.py  routines.py  usage.py  user.py
app/services/: auth_service.py  bootstrap_service.py  membership_service.py  usage_service.py  user_service.py
app/services/nutrition_engine/: formulas.py  generator.py  substitutions.py
app/services/routine_engine/: generator.py  progression.py  rules.py  templates.py
app/utils/: security_utils.py
app/workers/: celery_app.py
app/workers/tasks/: maintenance_tasks.py
tests/: test_admin_import_routes.py  test_admin_import_sql.py  test_demo.py  test_health.py
